--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import 'bootstrap-datetimepicker';
-@import 'bootstrap-markdown';
+/*@import 'bootstrap-markdown';*/
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "gritter";
